feat(formation): 0 SonarQube issues, 83.8% coverage
- Delete FormationDTO.java and FormationDtoTest.java
- Add FormationMapperTest, FormationSearchServiceTest, FormationControllerTest enhancements
- Add FormationWorkflowServiceCoverageTest, CoverageBoostTest
- Fix S6204 Stream.toList(), S1948 Serializable, S1192 constants
- Fix S1144 unused method, S1172 unused params, S6809 self-injection
- Fix S3358 nested ternary, S3776 complexity, S1481/S1854 unused vars
- Fix S1128 unused imports, S1117 field hiding, S5778 lambda
- All 753 tests pass (16 pre-existing failures)